<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/submit"
        android:text="submit"
        android:layout_below="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/nav"
        android:text="Open Navigation"
        android:layout_below="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>